@@ -1,0 +1,60 @@
+.TH MOSH 1 "2009-07-17"
+.SH NAME
+mosh \- A Fast R6RS Scheme Interpreter
+.SH SYNOPSIS
+.B mosh
+[
+.I options
+] 
+[
+.I file
+]
+.SH DESCRIPTION
+.B mosh 
+is a free and fast interpreter for Scheme that supports all of the features of R6RS.
+.PP
+The default auto-compile-cache directory is $HOME/.mosh.
+.PP
+This manpage only describes the basic usage options of mosh. For the
+full user manual, please visit http://mosh.monaos.org.
+.SH OPTIONS
+.TP
+\fB-5\fP
+Run with safe mode (Almost R5RS).
+.TP
+\fB--help\fP, \fB-h\fP
+Prints help.
+.TP
+\fB-v\fP, \fB-V\fP
+Prints version and exits.
+.TP
+\fB-p\fP
+Executes with profiler.
+.TP
+\fB--loadpath\fP=\fIpath\fP
+Add library loadpath.
+.br
+The \fIpath\fP is a colon-separated list of directories.
+.br
+See also MOSH_LOADPATH.
+.TP
+\fB--disable-acc\fP
+Disables auto-compile-cache.
+.TP
+\fB--clean-acc\fP
+Cleans auto-compile-cache.
+.SH ENVIRONMENT
+.TP
+.B MOSH_LOADPATH
+You can add library loadpaths by using this variable with
+colon-separated paths.
+.SH SEE ALSO
+.BR mosh_config (1)
+.SH MORE INFORMATION
+http://code.google.com/p/mosh-scheme (source)
+.br
+http://code.google.com/p/mosh-scheme/issues (bug reports)
+.br
+http://mosh.monaos.org (user manual)
+.SH AUTHOR
+Taro Minowa (higepon) <higepon@users.sourceforge.jp>
