@@ -1,3 +1,7 @@
+2009-07-20  higepon  <higepon@users.sourceforge.jp>
+
+        * mosh.1, mosh_config.1: Added man by dmoerner. (Issue 77: Manpages for mosh)
+
 2009-07-19  higepon  <higepon@users.sourceforge.jp>
 
         * NumberReader.y : Fixed (=  #i1.2e-3 #i12e-4) => #f should be #t (Issue 75 pointed out by mrc.mgg).
